# xm5-head-tracker

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build-tests.cmd  build.cmd  xm5_head_tracker.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: MACOS.md  PROTOCOL.md
include/sony_head_tracker/: app_config.hpp  audio_wake.hpp  bluetooth_recovery.hpp  cancellation.hpp  device.hpp  hid_backend.hpp  macos_support.hpp  output_udp.hpp
macos/: Info.plist  project.yml
macos/App/: ConnectionHeaderView.swift  ContentView.swift  DeviceInspectorView.swift  OrientationReadoutView.swift  OutputStatusView.swift  SettingsView.swift  SonyHeadTrackerApp.swift  TelemetryGraphView.swift  ThirdPartyLicensesView.swift  TrackerModel.swift
macos/Bridge/: SonyHeadTracker-Bridging-Header.h  sony_head_tracker_c.h  sony_head_tracker_c.mm
macos/Resources/: sony-head-tracker-LICENSE.txt
macos/SonyHeadTracker.xcodeproj/: project.pbxproj
macos/SonyHeadTracker.xcodeproj/xcshareddata/xcschemes/: SonyHeadTracker.xcscheme
script/: build_and_run.sh
src/: app_config.cpp  hid_backend.cpp
src/macos/: app_config_store_macos.cpp  audio_wake_macos.cpp  bluetooth_recovery_macos.mm  hid_backend_macos.cpp  logger_macos.cpp  main_macos.cpp  output_udp_posix.cpp
tests/: c_api_tests.cpp  macos_support_tests.cpp  math_tests.cpp
